# msdatasets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  getting-started.md  index.md  usage.md
src/msdatasets/: __init__.py  cli.py  client.py  config.py  download.py  exceptions.py  hf.py  models.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_download.py  test_hf.py  test_models.py  test_package.py
