[project]
name = "msdatasets"
version = "0.1.0"
description = "A unified dataset framework for mass spectrometry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chris Grams", email = "chrisagrams@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "httpx>=0.27",
    "mstransfer>=0.2.2",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://chrisagrams.github.io/msdatasets"
Repository = "https://github.com/chrisagrams/msdatasets"

[project.scripts]
msdatasets = "msdatasets.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msdatasets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mstransfer.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["msdatasets"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
